--- a/Predict/Prediction_Ridge.ipynb
+++ b/Predict/Prediction_Ridge.ipynb
@@ -118,27 +118,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "39f71e16-4a61-4fad-acec-9ebfe7d6d7b3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(44141497.05298185)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.square(df_homes[\"price\"]-df_homes[\"price\"].mean()).sum()\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f3059c70-d116-4f0f-9ec6-85bd5f28745a",
    "metadata": {
@@ -1115,9 +1094,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (tf-clean-env)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tf-clean-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1129,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
